--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "client"]
-	path = client
+[submodule "checkers-ui"]
+	path = checkers-ui
 	url = git@github.com:waelsy123/checkers-ui.git
